--- a/NY/old/index.html
+++ b/NY/old/index.html
@@ -21,41 +21,25 @@
     const socket = io('http://192.168.0.85:5000');
   
     socket.on('status_update', (data) => {
-      // P1-A
       const p1a = document.getElementById('P1-A');
-      if (p1a && data['P1-A']) {
+      if (p1a) {
         const eventType = data['P1-A']['event_type'];
+
+        // 텍스트 표시
         p1a.querySelector('.status-value').textContent = `${eventType}`;
+
+        // 색상 조건
         if (eventType === "processing") {
-          p1a.style.backgroundColor = "#4CAF50";
+          p1a.style.backgroundColor = "#4CAF50";  
         } else if (eventType === "repair") {
           p1a.style.backgroundColor = "orange";
         } else if (eventType === "maintenance") {
           p1a.style.backgroundColor = "yellow";
         } else if (eventType === "failure") {
-          p1a.style.backgroundColor = "red";
+          p1a.style.backgroundColor = "red";  
         } else {
           p1a.style.backgroundColor = "#444";
         }
       }
-  
-      // P2-A
-      const p2a = document.getElementById('P2-A');
-      if (p2a && data['P2-A']) {
-        const eventType = data['P2-A']['event_type'];
-        p2a.querySelector('.status-value').textContent = `${eventType}`;
-        if (eventType === "processing") {
-          p2a.style.backgroundColor = "#4CAF50";
-        } else if (eventType === "repair") {
-          p2a.style.backgroundColor = "orange";
-        } else if (eventType === "maintenance") {
-          p2a.style.backgroundColor = "yellow";
-        } else if (eventType === "failure") {
-          p2a.style.backgroundColor = "red";
-        } else {
-          p2a.style.backgroundColor = "#444";
-        }
-      }
     });
   </script>
-  
